--- a/css/mathstyle.css
+++ b/css/mathstyle.css
@@ -1,7 +1,63 @@
-* {
+/** {
   box-sizing: border-box;
 }
 
 body {
   background: goldenrod;
+}*/
+body {
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+* {
+  font-family: 'Short Stack', cursive;
+}
+#header {
+  border:5px solid #B9770E;
+  height:100px;
+  width: 100%;
+  background-color: #29ABA4;
+
+}
+
+#who_are_we {
+  position: absolute;
+  right: 0px;
+}
+
+#john {
+  float: left;
+  clear: both;
+  border: 0px;
+  width: 500px;
+}
+
+#martin {
+  float: left;
+  border: 0;
+  width: 500px;
+}
+
+#form {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 31%;
+  margin: 0 auto;
+}
+
+
+
+
+div
+{
+  height:100px;
+  width :100px;
+  background:red;
+  display:block;
+  opacity:1;
+  transition : all .3s;
+  -wekit-transition : all .3s;
+  -moz-transition : all .3s;
 }
