--- a/css/mathstyle.css
+++ b/css/mathstyle.css
@@ -1,33 +1,87 @@
 @font-face {
   font-family: 'Short Stack', 'Comic Sans', cursive;
-  src: url(="<link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">");
+  font-family: 'Amatic SC', cursive;
+  src: url(link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Short+Stack");
 }
 
-/** {
-  box-sizing: border-box;
-}
+* {}
 
-body {
-  background: goldenrod;
-}*/
 body {
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
-* {
-  font-family: 'Short Stack', cursive;
+h1, h2, h3, h4, h5, h6, legend {
+  font-family: 'Amatic SC', cursive;
+  font-weight: bold;
 }
-#header {
-  border:5px solid #f2c32b;
-  height:100px;
-  width: 100%;
-  background-color: #65d0e6 ;
+
+h1 {
+  font-size: 36pt;
+  padding-left: 5%;
 
 }
+
+h2 {
+  font-size: 30pt;
+  padding-left: 5%;
+}
+
+p {
+  font-family: 'Short Stack', 'Comic Sans', cursive;
+  font-size: 14px;
+}
+
+nav {
+  padding-left: 50%;
+  text-align: left;
+}
+nav li {
+  list-style: none;
+  display: inline-block;
+  font-family: 'Short Stack', 'Comic Sans', cursive;
+  font-size: 14pt;
+}
+
+.header {
+  border:3px solid #f2c32b;
+  width: 99.5%;
+  background-color: #76b52b;
+  background-color: rgba(118, 181, 43, 0.5);
+
+}
+
+.intro {
+  padding-left: 10%;
+  padding-right: 15%;
+  margin-top: 20px;
+}
+
+#form {
+  text-align: left;
+  margin: 30px auto;
+  width:750px;
+  background-color: #f2c32b;
+  background-color: rgba(242, 195, 43, 0.8);
+  border:5px solid #76b52b;
+  display:block;
+  padding-left: 15px;
+  transition : all .5s;
+  -wekit-transition : all .5s;
+  -moz-transition : all .5s;
+}
+
+#complaint {
+  /*position: absolute;*/
+  border: 0px;
+  width: 700px;
+  top: 30%;
+  left: 25%;
+}
+
 
 #who_are_we {
-  position: absolute;
+  /*position: absolute;*/
   right: 0px;
 }
 
@@ -42,34 +96,4 @@ body {
   float: left;
   border: 0;
   width: 500px;
-}
-
-#form {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 31%;
-  margin: 0 auto;
-}
-
-#form
-{
-  height:362px;
-  width:550px;
-  background:#f2c32b;
-  border:5px solid #76b52b;
-  display:block;
-  opacity:1;
-  transition : all .5s;
-  -wekit-transition : all .5s;
-  -moz-transition : all .5s;
-}
-
-#complaint {
-  position: absolute;
-  border: 0px;
-  width: 700px;
-  top: 30%;
-  left: 25%;
-  text-align: center;
 }
