--- a/css/mathstyle.css
+++ b/css/mathstyle.css
@@ -17,8 +17,10 @@ h1, h2, h3, h4, h5, h6, legend {
 }
 
 h1 {
-  font-size: 36pt;
+  font-size: 42pt;
   padding-left: 5%;
+  margin-top: 15px;
+  margin-bottom: 20px;
 
 }
 
@@ -33,8 +35,9 @@ p {
 }
 
 nav {
-  padding-left: 50%;
+  padding-left: 60%;
   text-align: left;
+  margin-bottom: 0;
 }
 nav li {
   list-style: none;
@@ -57,20 +60,39 @@ nav li {
   margin-top: 20px;
 }
 
-#form {
+
+/* form to start game */
+
+.form {
+  font-family: 'Short Stack', 'Comic Sans', cursive;
   text-align: left;
   margin: 30px auto;
   width:750px;
   background-color: #f2c32b;
   background-color: rgba(242, 195, 43, 0.8);
-  border:5px solid #76b52b;
+  border:5px solid #407f26;
   display:block;
-  padding-left: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 30px;
   transition : all .5s;
   -wekit-transition : all .5s;
   -moz-transition : all .5s;
 }
 
+fieldset {
+  margin-top: 30px;
+}
+
+
+legend {
+  font-family: 'Amatic SC', cursive;
+  font-size: 20pt;
+  font-weight: bold;
+}
+
+
+/* score page */
 #complaint {
   /*position: absolute;*/
   border: 0px;
@@ -79,7 +101,7 @@ nav li {
   left: 25%;
 }
 
-
+/*About page styling*/
 #who_are_we {
   /*position: absolute;*/
   right: 0px;
